AsmParser/asm8086Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from asm8086.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class asm8086Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, BYTE=15, WORD=16, DWORD=17, 
		DSEG=18, CSEG=19, INCLUDE=20, TITLE=21, END=22, ORG=23, ENDIF=24, IF=25, 
		EQU=26, DW=27, DB=28, DD=29, PTR=30, NOT=31, OFFSET=32, RW=33, RB=34, 
		RS=35, LENGTH=36, COMMENT=37, REGISTER=38, OPCODE=39, REP=40, DOLLAR=41, 
		SIGN=42, NAME=43, NUMBER=44, STRING=45, EOL=46, WS=47;
	public const int
		RULE_prog = 0, RULE_line = 1, RULE_instruction = 2, RULE_lbl = 3, RULE_assemblerdirective = 4, 
		RULE_rw = 5, RULE_rb = 6, RULE_rs = 7, RULE_cseg = 8, RULE_dseg = 9, RULE_dw = 10, 
		RULE_db = 11, RULE_dd = 12, RULE_equ = 13, RULE_if_ = 14, RULE_assemblerexpression = 15, 
		RULE_assemblerlogical = 16, RULE_assemblerterm = 17, RULE_endif = 18, 
		RULE_end = 19, RULE_org = 20, RULE_title = 21, RULE_include = 22, RULE_expressionlist = 23, 
		RULE_label = 24, RULE_expression = 25, RULE_multiplyingExpression = 26, 
		RULE_argument = 27, RULE_ptr = 28, RULE_dollar = 29, RULE_register_ = 30, 
		RULE_string = 31, RULE_name = 32, RULE_number = 33, RULE_opcode = 34, 
		RULE_rep = 35, RULE_comment = 36;
	public static readonly string[] ruleNames = {
		"prog", "line", "instruction", "lbl", "assemblerdirective", "rw", "rb", 
		"rs", "cseg", "dseg", "dw", "db", "dd", "equ", "if_", "assemblerexpression", 
		"assemblerlogical", "assemblerterm", "endif", "end", "org", "title", "include", 
		"expressionlist", "label", "expression", "multiplyingExpression", "argument", 
		"ptr", "dollar", "register_", "string", "name", "number", "opcode", "rep", 
		"comment"
	};

	private static readonly string[] _LiteralNames = {
		null, "'!'", "':'", "'.'", "'('", "')'", "'eq'", "'ne'", "','", "'*'", 
		"'/'", "'mod'", "'and'", "'['", "']'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "'$'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "BYTE", "WORD", "DWORD", "DSEG", "CSEG", "INCLUDE", 
		"TITLE", "END", "ORG", "ENDIF", "IF", "EQU", "DW", "DB", "DD", "PTR", 
		"NOT", "OFFSET", "RW", "RB", "RS", "LENGTH", "COMMENT", "REGISTER", "OPCODE", 
		"REP", "DOLLAR", "SIGN", "NAME", "NUMBER", "STRING", "EOL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "asm8086.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static asm8086Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public asm8086Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public asm8086Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ITerminalNode[] EOL() { return GetTokens(asm8086Parser.EOL); }
		public ITerminalNode EOL(int i) {
			return GetToken(asm8086Parser.EOL, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << DSEG) | (1L << CSEG) | (1L << INCLUDE) | (1L << TITLE) | (1L << END) | (1L << ORG) | (1L << ENDIF) | (1L << IF) | (1L << DW) | (1L << DB) | (1L << DD) | (1L << RW) | (1L << RB) | (1L << RS) | (1L << COMMENT) | (1L << OPCODE) | (1L << REP) | (1L << NAME) | (1L << EOL))) != 0)) {
				{
				{
				State = 74; line();
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__0) {
					{
					{
					State = 75; Match(T__0);
					State = 76; line();
					}
					}
					State = 81;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 82; Match(EOL);
				}
				}
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public LblContext lbl() {
			return GetRuleContext<LblContext>(0);
		}
		public AssemblerdirectiveContext assemblerdirective() {
			return GetRuleContext<AssemblerdirectiveContext>(0);
		}
		public InstructionContext instruction() {
			return GetRuleContext<InstructionContext>(0);
		}
		public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				State = 89; lbl();
				}
				break;
			}
			State = 94;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
			case DSEG:
			case CSEG:
			case INCLUDE:
			case TITLE:
			case END:
			case ORG:
			case ENDIF:
			case IF:
			case DW:
			case DB:
			case DD:
			case RW:
			case RB:
			case RS:
			case NAME:
				{
				State = 92; assemblerdirective();
				}
				break;
			case OPCODE:
			case REP:
				{
				State = 93; instruction();
				}
				break;
			case T__0:
			case COMMENT:
			case EOL:
				break;
			default:
				break;
			}
			State = 97;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COMMENT) {
				{
				State = 96; comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstructionContext : ParserRuleContext {
		public OpcodeContext opcode() {
			return GetRuleContext<OpcodeContext>(0);
		}
		public RepContext rep() {
			return GetRuleContext<RepContext>(0);
		}
		public ExpressionlistContext expressionlist() {
			return GetRuleContext<ExpressionlistContext>(0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruction; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterInstruction(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitInstruction(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstructionContext instruction() {
		InstructionContext _localctx = new InstructionContext(Context, State);
		EnterRule(_localctx, 4, RULE_instruction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==REP) {
				{
				State = 99; rep();
				}
			}

			State = 102; opcode();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__12) | (1L << BYTE) | (1L << WORD) | (1L << DWORD) | (1L << PTR) | (1L << NOT) | (1L << OFFSET) | (1L << LENGTH) | (1L << REGISTER) | (1L << DOLLAR) | (1L << SIGN) | (1L << NAME) | (1L << NUMBER) | (1L << STRING))) != 0)) {
				{
				State = 103; expressionlist();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LblContext : ParserRuleContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public LblContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lbl; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterLbl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitLbl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLbl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LblContext lbl() {
		LblContext _localctx = new LblContext(Context, State);
		EnterRule(_localctx, 6, RULE_lbl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106; label();
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 107; Match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssemblerdirectiveContext : ParserRuleContext {
		public OrgContext org() {
			return GetRuleContext<OrgContext>(0);
		}
		public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		public If_Context if_() {
			return GetRuleContext<If_Context>(0);
		}
		public EndifContext endif() {
			return GetRuleContext<EndifContext>(0);
		}
		public EquContext equ() {
			return GetRuleContext<EquContext>(0);
		}
		public DbContext db() {
			return GetRuleContext<DbContext>(0);
		}
		public DwContext dw() {
			return GetRuleContext<DwContext>(0);
		}
		public CsegContext cseg() {
			return GetRuleContext<CsegContext>(0);
		}
		public DdContext dd() {
			return GetRuleContext<DdContext>(0);
		}
		public DsegContext dseg() {
			return GetRuleContext<DsegContext>(0);
		}
		public TitleContext title() {
			return GetRuleContext<TitleContext>(0);
		}
		public IncludeContext include() {
			return GetRuleContext<IncludeContext>(0);
		}
		public RwContext rw() {
			return GetRuleContext<RwContext>(0);
		}
		public RbContext rb() {
			return GetRuleContext<RbContext>(0);
		}
		public RsContext rs() {
			return GetRuleContext<RsContext>(0);
		}
		public AssemblerdirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assemblerdirective; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterAssemblerdirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitAssemblerdirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssemblerdirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssemblerdirectiveContext assemblerdirective() {
		AssemblerdirectiveContext _localctx = new AssemblerdirectiveContext(Context, State);
		EnterRule(_localctx, 8, RULE_assemblerdirective);
		try {
			State = 126;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 110; org();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 111; end();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 112; if_();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 113; endif();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 114; equ();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 115; db();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 116; dw();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 117; cseg();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 118; dd();
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 119; dseg();
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 120; title();
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 121; include();
				}
				break;
			case 13:
				EnterOuterAlt(_localctx, 13);
				{
				State = 122; rw();
				}
				break;
			case 14:
				EnterOuterAlt(_localctx, 14);
				{
				State = 123; rb();
				}
				break;
			case 15:
				EnterOuterAlt(_localctx, 15);
				{
				State = 124; rs();
				}
				break;
			case 16:
				EnterOuterAlt(_localctx, 16);
				{
				State = 125; Match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RwContext : ParserRuleContext {
		public ITerminalNode RW() { return GetToken(asm8086Parser.RW, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public RwContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rw; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterRw(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitRw(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRw(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RwContext rw() {
		RwContext _localctx = new RwContext(Context, State);
		EnterRule(_localctx, 10, RULE_rw);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAME) {
				{
				State = 128; name();
				}
			}

			State = 131; Match(RW);
			State = 132; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RbContext : ParserRuleContext {
		public ITerminalNode RB() { return GetToken(asm8086Parser.RB, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public RbContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rb; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterRb(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitRb(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRb(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RbContext rb() {
		RbContext _localctx = new RbContext(Context, State);
		EnterRule(_localctx, 12, RULE_rb);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAME) {
				{
				State = 134; name();
				}
			}

			State = 137; Match(RB);
			State = 138; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RsContext : ParserRuleContext {
		public ITerminalNode RS() { return GetToken(asm8086Parser.RS, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public RsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rs; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterRs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitRs(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RsContext rs() {
		RsContext _localctx = new RsContext(Context, State);
		EnterRule(_localctx, 14, RULE_rs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 141;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NAME) {
				{
				State = 140; name();
				}
			}

			State = 143; Match(RS);
			State = 144; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CsegContext : ParserRuleContext {
		public ITerminalNode CSEG() { return GetToken(asm8086Parser.CSEG, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public CsegContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cseg; } }
		public override void EnterRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.EnterCseg(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			Iasm8086Listener typedListener = listener as Iasm8086Listener;
			if (typedListener != null) typedListener.ExitCseg(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iasm8086Visitor<TResult> typedVisitor = visitor as Iasm8086Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCseg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CsegContext cseg() {
		CsegContext _localctx = new CsegContext(Context, State);
		EnterRule(_localctx, 16, RULE_cseg);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146; Match(CSEG);
			State = 148;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__12) | (1L << BYTE) | (1L << WORD) | (1L << DWORD) | (1L << PTR) | (1L << NOT) | (1L << OFFSET) | (1L << LENGTH) | (1L << REGISTER) | (1L << DOLLAR) | (1L << SIGN) | (1L << NAME) | (1L << NUMBER) | (1L << STRING))) != 0)) {
				{
				State = 147; expression();
				}
			}
